Fix logo & languages accessibility color contrast

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ h2 {
 
 #headerlogo a {
   text-decoration: none;
-  color: #6070ff;
+  color: #142cff;
 }
 
 .grid-container {
@@ -159,7 +159,7 @@ h2 {
 }
 
 .linkss li {
-  color: #6070ff;
+  color: #0018f5;
   display: inline-block;
   border: 1px solid #ebebff;
   background-color: #ebebff;
@@ -774,7 +774,7 @@ form {
   }
 
   .linkss li {
-    color: #6070ff;
+    color: #0018f5;
     display: inline-block;
     border: 1px solid #ebebff;
     background-color: #ebebff;
